[package]
name = "harvest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"
dirs = "4.0.0"

preferences = "1.1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
